@@ -37,6 +37,7 @@
 #include "config.h"
 #include "shared/allocator.h"
 #include "shared/log.h"
+#include "shared/status.h"
 
 #include <ldns/ldns.h>
 #include <stdint.h>
@@ -102,6 +103,8 @@
 #define RCODE(packet)   (*buffer_at((packet), 3) & RCODE_MASK)
 #define RCODE_SET(packet, rcode) \
         (*buffer_at((packet), 3) = (*buffer_at((packet), 3) & ~RCODE_MASK) | (rcode))
+
+extern ods_lookup_table ods_rcode_str[];
 
 /**
  * Buffer.
@@ -532,6 +535,14 @@ ldns_pkt_rcode buffer_pkt_rcode(buffer_type* buffer);
  *
  */
 void buffer_pkt_set_rcode(buffer_type* buffer, ldns_pkt_rcode rcode);
+
+/**
+ * Look up a descriptive text by each rcode.
+ * \param[in] rcode rcode
+ * \return const char* descriptive text
+ *
+ */
+const char* buffer_rcode2str(ldns_pkt_rcode rcode);
 
 /**
  * Get QDCOUNT from buffer.
