@@ -1,5 +1,7 @@
 23 July 2013: Matthijs
 - Set AA bit in SOA response (fix daily tests).
+- Better log msg bad rcode notify
+
 
 10 July 2013: Matthijs
 - Signer response to SOA queries from file, instead of memory. Makes
